--- a/bootstrap/templates/base.html
+++ b/bootstrap/templates/base.html
@@ -64,12 +64,12 @@
 	<div class="container-fluid">
 	  <div class="sidebar">
 		<div class="well">
-			<h3>Blogroll</h3>
+<!-- 			<h3>Blogroll</h3>
 			<ul>
 				{% for name, link in LINKS %}
 				<li><a href="{{ link }}">{{ name }}</a></li>
 				{% endfor %}
-			</ul>
+			</ul> -->
 			<div class="social">
 			<h3>Social</h3>
 			<ul>
